2011-01-13  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m: removed cvs diff text.
	* ve.m: same.

2011-01-13  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m:  now tallies the number of estimates per tau and provides as output.  Used to compute weighted statistics.
	* video_msd.m: now computes weighted statistics so that the mean and error for the MSD are better influenced by the number of individual bead measures. 
	* plot_msd.m: also updated for new statistics measures and tweaked plots.
	* ve.m: changed to use the mean MSD as an imput instead of the individual MSD curves for each bead.  Takes advantage of weighted statistics to minimize bias/error.  Estimates error differently, now propagates max.min MSDs through the GSER function.
	* plot_ve.m: alse uses new stats measures and tweaked plots.
	
2010-09-30  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m:  added the 'winedge' functionality that limits each path to window sizes that are some factor smaller than the path length.  The default size is '1' that replicates previous behavior.  To restrict a path's windows to 80% of the path-length, set to '0.8'.
	* plot_msd.m: clarified documentation.
	* sim_msd.m: modified call to 'sim_newt_fluid' for the new 'numpaths' argument.
	* ve.m: added an argument that eliminates data points that have less than a desired population size.
	* video_msd.m: added usage of 'winedge' from msd.m and 'nmin' from ve.m.

2009-09-04 Ricky Spero <rspero@physics.unc.edu>
	* msdt.m Numerous minor modifications. Commented code, added x and y outputs for greater flexibility in usage.

2009-05-22  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m: fixed bug that was doubling MSD of x instead of looking at both x and y.

2009-05-04  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m: slight cosmetic changes in algorithm for better readibility and possible export of r2 values.

2008-11-20  Kris Ford <krisford@email.unc.edu>
	* .cvsignore: added .mat files