@@ -1,3 +1,6 @@
+2011-01.13  Jeremy Cribb <jcribb@email.unc.edu>
+	* getMSDslope.m: added.  souped up way of computing alpha values that uses brian eastwoods edge_detector_1d code.  Originally Ricky Spero's code, I've tweaked it and added it here. Computing the GSER (ve.m) now uses this method.
+
 2011-01-13  Jeremy Cribb <jcribb@email.unc.edu>
 	* msd.m: removed cvs diff text.
 	* ve.m: same.
